<resources>
    <string name="app_name">VehicleTest</string>
    <string name="vehicle_page_title">Vehicle List</string>
    <string name="general_error_message">Ops, something happens, please check your internet connection.</string>
    <string name="empty_vehicle_list_error_message">There are not available vehicles.</string>
    <string name="vehicle_details_label_vehicle_id">Vehicle Id</string>
    <string name="vehicle_details_label_vrn">VRN</string>
    <string name="vehicle_details_label_country">Country</string>
    <string name="vehicle_details_label_color">Color</string>
    <string name="vehicle_details_label_type">Type</string>
    <string name="vehicle_details_label_default">Default</string>
    <string name="vehicle_details_label_title">Vehicle Details</string>
    <string name="retry">Retry</string>
</resources>
