<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.davidsmt.vehicleapp.ui.vehicledetails.VehicleDetailsActivity">

    <data>
        <variable
            name="vehicle"
            type="com.davidsmt.vehicleapp.ui.models.VehicleUI" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_screen_margin">

        <!--Header-->
        <TextView
                style="@style/PageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/vehicle_details_label_title" />

        <!--Vehicle id-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_extra_big"
            android:text="@string/vehicle_details_label_vehicle_id" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.vehicleId}"
            tools:text="Vehicle id" />

        <!--Vrn-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:text="@string/vehicle_details_label_vrn" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.vrn}"
            tools:text="VRN" />

        <!--Country-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:text="@string/vehicle_details_label_country" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.country}"
            tools:text="NL" />

        <!--Color-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:text="@string/vehicle_details_label_color" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.color}"
            tools:text="Blue" />

        <!--Type-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:text="@string/vehicle_details_label_type" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.type}"
            tools:text="Car" />

        <!--Default-->
        <TextView
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:text="@string/vehicle_details_label_default" />

        <TextView
            style="@style/ListItemContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:text="@{vehicle.defaultValue}"
            tools:text="true" />

    </LinearLayout>

</layout>